# pytest-consul

./: .bumpversion.cfg  .coveragerc  .travis.yml  README.md  pytest.ini  setup.cfg  setup.py  tox.ini
pytest_consul/: plugin.py
test/: test_live_server.py  test_plugin_config.py  test_ports.py
