[bdist_wheel]
universal = 1

[metadata]
description-file = README.md

[bumpversion]
current_version = 0.0.2
commit = True
tag = True
tag_name = {new_version}

[bumpversion:file:setup.py]

[bumpversion:file:pytest_consul/__init__.py]

[coverage:run]
branch = True
source = pytest_consul
omit =
    */test/*

[coverage:report]
exclude_lines =
    ✘${TOX_ENVNAME}
    pragma: no ?cover
precision = 2
