[bumpversion]
current_version = 0.1.0
commit = True
tag = True
tag_name = {new_version}

[bdist_wheel]
universal = 1

[metadata]
description-file = README.md

[bumpversion:file:setup.py]

[bumpversion:file:pytest_consul/__init__.py]

[coverage:run]
branch = True
source = pytest_consul
omit = 
	*/test/*

[coverage:report]
exclude_lines = 
	tox-{TOX_ENVNAME}
	pragma: no ?cover
precision = 2

